3rd commit: modal js loading and success connecting form email complete

--- a/styles.css
+++ b/styles.css
@@ -381,12 +381,13 @@ MODAL
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: -1;
+
 }
 
 .modal__overlay--loading {
     background-color: #242424;
     font-size: 80px;
-    z-index: -1;
 }
 
 .modal__overlay--success {
@@ -395,6 +396,10 @@ MODAL
     font-weight: 700;
     text-align: center;
     padding: 28px;
+}
+
+.modal__overlay--visible {
+    z-index: 1;
 }
 
 .fa-spinner {
